gobmkida/c1/decide_position
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/decide_position/src/engine/sgfdecide.c:899:36: error: use of undeclared identifier 'decide_position_snames'
gprintf( "status=%s, escape=%d\n", decide_position_snames[v2[4]], ( unsigned int)dragon2[*v2].escape_route); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/decide_position/src/obj/1/sgfdecide.o] Error 1
